name:                th
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gujiaxi/th#readme
license:             BSD3
license-file:        LICENSE
author:              Jiaxi Gu
maintainer:          imjiaxi@gmail.com
copyright:           Copyright: (c) 2017 Jiaxi Gu
category:            Personal
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable th-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dynamic
  build-depends:       base
                     , th
                     , containers
                     , directory
                     , mtl
                     , optparse-applicative
  default-language:    Haskell2010

test-suite th-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , th
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gujiaxi/th
